--- a/app/ui/TeamSummaries/styles.module.css
+++ b/app/ui/TeamSummaries/styles.module.css
@@ -12,7 +12,7 @@
   padding: 1rem;
 }
 
-@media screen and (max-width: var(--mobile-breakpoint)) {
+@media screen and (max-width: 755px) {
   .teamContent {
     padding: 0.25rem;
   }
