--- a/app/ui/TeamSummary/styles.module.css
+++ b/app/ui/TeamSummary/styles.module.css
@@ -12,21 +12,27 @@
   width: 100%;
   max-width: 1200px;
 }
+
 .teamData > * {
   border-left: 1px solid var(--color-border-light);
   padding: 0.5rem 1rem;
 }
+
 .teamData > *:first-child {
   border-left: none;
 }
+
 @media screen and (max-width: 980px) {
   .teamData {
     flex-direction: column;
   }
+
   .teamData > * {
     border-left: none;
     border-bottom: 1px solid var(--color-border-light);
+    padding: 0.25rem;
   }
+
   .teamData > *:last-child {
     border-bottom: none;
   }
